# intellect-agent

./: .dockerignore  .env.example  .gitee-ci.yml  .gitignore  .hadolint.yaml  .mailmap  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README.zh-CN.md  RELEASE_v0.5.0.md  RELEASE_v0.6.0.md  RELEASE_v0.6.1.md  RELEASE_v0.6.2.md  RELEASE_v0.6.3.md  RELEASE_v0.6.4.md  RELEASE_v0.6.5.md  RELEASE_v0.6.7.md  SECURITY.md  TODO.md  VERIFY.md  batch_runner.py  cli-config.yaml.example  cli.py  constraints-termux.txt  docker-compose.windows.yml  docker-compose.yml  flake.nix  gpg-public.asc  intellect  intellect-already-has-routines.md  intellect_bootstrap.py  intellect_constants.py  intellect_logging.py  intellect_rust.py  intellect_state.py  (+17 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.plans/: streaming-support.md
acp_adapter/: __init__.py  auth.py  entry.py  events.py  permissions.py  server.py  session.py  tools.py
acp_registry/: agent.json
agent/: account_usage.py  agent_init.py  agent_runtime_helpers.py  anthropic_adapter.py  auxiliary_client.py  azure_identity_adapter.py  background_review.py  bedrock_adapter.py  browser_provider.py  browser_registry.py  chat_completion_helpers.py  codex_responses_adapter.py  codex_runtime.py  context_compressor.py  context_engine.py  context_references.py  conversation_compression.py  (+89 more)
rust-core/: Cargo.toml  README.md  deny.toml
rust-core/.cargo/: config.toml
rust-core/src/: backend.rs  compression.rs  connection.rs  counters.rs  crypto.rs  error_classifier.rs  fts.rs  gateway.rs  lib.rs  prompt_caching.rs  sandbox.rs  sanitize.rs  schema.rs  stream.rs  tokens.rs  tool_utils.rs  usage.rs
(+2954 files in other folders)
