[package]
name = "intellect-core"
version = "0.1.0"
edition = "2021"
description = "Intellect Agent core layer — Rust (PyO3) native extension"

[lib]
name = "intellect_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
rusqlite = { version = "0.31", features = ["bundled"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
