[package]
name = "intellect-core"
version = "0.1.0"
edition = "2021"
description = "Intellect Agent core layer — Rust (PyO3) native extension"

[lib]
name = "intellect_core"
crate-type = ["cdylib", "rlib"]

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.21" }
rusqlite = { version = "0.31", features = ["bundled"] }
rand = "0.8"
fancy-regex = "0.14"
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
