[package]
name = "intellect-community-core"
version = "0.1.0"
edition = "2021"
description = "Intellect Agent core layer — Rust (PyO3) native extension"

[lib]
name = "intellect_community_core"
crate-type = ["cdylib", "rlib"]

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.21" }
rusqlite = { version = "0.31", features = ["bundled"] }
rand = "0.8"
regex = "1"
serde_json = "1"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
aes = "0.8"
cbc = "0.1"
hmac = "0.12"
pbkdf2 = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
